# os-june

./: .env.example  .gitignore  .jun287-spec-scratch.md  .prettierignore  AGENTS.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Makefile  PRIVACY.md  README.md  SECURITY.md  hud.html  index.html  mascot.html  meeting-hud.html  onboarding-preview.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  sound-test.html  tsconfig.json  vite.config.ts
june-api/crates/api/: Cargo.toml
june-api/crates/api/src/: auth.rs  envelope.rs  error.rs  lib.rs  multipart.rs  state.rs  validation.rs
june-api/crates/api/src/handlers/: agent.rs  browser_transport_policy.rs  computer_use.rs  dictate.rs  issues.rs  mod.rs  models.rs  notes.rs  p3a.rs  share.rs  share_viewer.rs  share_viewer_page.css  share_viewer_page.html  share_viewer_page.js  verify.rs  video.rs  web.rs
june-api/crates/api/tests/: client_contract.rs  http_boundary.rs  share_boundary.rs
june-api/crates/api/tests/fixtures/client-contract/: error-codes.json
june-api/crates/api/tests/fixtures/client-contract/v0.0.33/: chat-completions-stream.json  chat-completions.json  dictate-cleanup.json  dictate-transcribe.json  image-edit.json  image-generate.json  issue-report.json  models-asr.json  models-text.json  notes-generate-auto.json  (+10 more)
june-api/crates/api/tests/support/: mod.rs
june-api/crates/app/: Cargo.toml
june-api/crates/app/src/: main.rs
june-api/crates/persistence/: Cargo.toml
june-api/crates/persistence/migrations/: 202607140001_shares.sql
june-api/crates/persistence/src/: lib.rs
june-api/crates/services/: Cargo.toml
june-api/crates/services/src/: agent_chat.rs  dictate.rs  error.rs  image.rs  issue_reports.rs  language.rs  lib.rs  note_generate.rs  note_transcribe.rs  p3a.rs  pricing.rs  share.rs  video.rs  web_augment.rs
june-api/crates/services/src/video/: tests.rs
scribe-api/: .dockerignore  .env.example  Cargo.toml  Dockerfile  clippy.toml  config.toml  rustfmt.toml
scribe-api/crates/api/: Cargo.toml
scribe-api/crates/api/src/: audio.rs  auth.rs  envelope.rs  error.rs  lib.rs  multipart.rs  state.rs  validation.rs
scribe-api/crates/api/src/handlers/: agent.rs  dictate.rs  health.rs  issues.rs  mod.rs  models.rs  notes.rs  verify.rs  web.rs
scribe-api/crates/api/tests/: http_boundary.rs
scribe-api/crates/app/: Cargo.toml
scribe-api/crates/app/src/: main.rs
scribe-api/crates/config/: Cargo.toml
scribe-api/crates/config/src/: lib.rs
scribe-api/crates/domain/: Cargo.toml
scribe-api/crates/domain/src/: lib.rs
scribe-api/crates/providers/: Cargo.toml
scribe-api/crates/providers/src/: audio_probe.rs  http.rs  issue_reports.rs  jwks.rs  lib.rs  m4a_probe.rs  openai.rs  os_accounts.rs  routing.rs  transcription.rs  venice.rs  wav_probe.rs
scribe-api/crates/services/: Cargo.toml
scribe-api/crates/services/src/: agent_chat.rs  charge_flow.rs  dictate.rs  error.rs  lib.rs  note_generate.rs  note_transcribe.rs  pricing.rs  prompts.rs  util.rs  web_augment.rs
scribe-api/crates/services/src/prompts/: dictate_cleanup.md  note_generate.md
scribe-api/deploy/: docker-compose.production.yml  docker-compose.staging.yml
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  cua-driver-LICENSE.md  cua-driver-contract.json  cua-driver-pin.json  cua-driver-sbom.spdx.json  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: hud.json  main.json  mascot.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  003_generation_blocks.sql  005_dictation_history.sql  007_agent.sql  009_session_folders.sql  010_p3a_counters.sql  011_connectors.sql  012_connector_grants.sql  013_connector_credited_runs.sql  014_note_transcription_jobs.sql  014_obsidian_vault_grants.sql  014_share_keys.sql  015_memories.sql  018_session_profiles.sql  019_memory_profiles.sql  020_completed_sessions.sql
src-tauri/native/computer-use-fixture/: main.swift
src-tauri/native/mac-dictation-helper/: main.swift
src-tauri/native/mac-system-audio-recorder/: main.swift
src-tauri/native/windows-dictation-helper/src/: focus.rs  main.rs  protocol.rs
src-tauri/resources/hermes-mcp/: june_computer_use_mcp.py
src-tauri/resources/hermes-skills/: README.md
src-tauri/src/: app_paths.rs  browser_broker.rs  commands.rs  computer_use.rs  computer_use_cursor.rs  computer_use_driver.rs  computer_use_permission_drag.rs  dictation.rs  extension_host.rs  feature_flags.rs  hermes_bridge.rs  june_api.rs  lib.rs  main.rs  mascot.rs  meeting_detection.rs  meeting_hud.rs  menu_bar.rs  note_audio_export.rs  note_save_flush.rs  notifications.rs  obsidian.rs  os_accounts.rs  scribe_api.rs  shutdown.rs  theme_icon.rs  updates.rs  video_download_url.rs
src-tauri/src/audio/: capture.rs  capture_buffer.rs  live_preview.rs  mod.rs  recovery.rs  system_macos.rs  turns.rs  validation.rs  waveform.rs
src-tauri/src/browser/: launcher.rs  managed.rs  mod.rs  policy.rs
src-tauri/src/commands/: note_transcription_benchmark.rs  note_transcription_timing_tests.rs
src-tauri/src/connectors/: approvals.rs  commands.rs  github.rs  google.rs  mod.rs  notion.rs  notion_mcp_oauth.rs  oauth.rs  scopes.rs  store.rs  triggers.rs
src-tauri/src/connectors/notion_prototype/: mod.rs
src-tauri/src/db/: migrations.rs  mod.rs  repositories.rs
src-tauri/src/domain/: processing.rs  types.rs
src-tauri/src/hermes/: apply_june_patches.py  june_browser_mcp.py  june_context_mcp.py  june_github_actions_mcp.py  june_github_mcp.py  june_notion_actions_mcp.py  june_notion_mcp.py  june_notion_prototype_mcp.py  june_video_mcp.py  june_web_mcp.py
src-tauri/src/obsidian/: commands.rs  mod.rs  types.rs
src-tauri/src/p3a/: mod.rs  questions.rs
src-tauri/src/providers/: generation.rs  mock.rs  mod.rs  transcription.rs
src-tauri/tests/: agent.rs  browser_redaction.rs  completed_sessions.rs  dictionary.rs  folders.rs  managed_browser.rs  notes.rs  processing.rs  recording_validation.rs  recovery.rs  source_modes.rs  source_processing.rs  source_readiness.rs  source_recovery.rs  storage.rs  turn_detection.rs
(+793 files in other folders)
