[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0"
authors = ["Open Software"]
publish = false

[workspace.dependencies]
scribe-api = { path = "crates/api" }
scribe-config = { path = "crates/config" }
scribe-domain = { path = "crates/domain" }
scribe-providers = { path = "crates/providers" }
scribe-services = { path = "crates/services" }

async-trait = "0.1"
axum = { version = "0.8", features = ["multipart"] }
base64 = "0.22"
bytes = "1"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
figment = { version = "0.10", features = ["env", "toml"] }
hound = "3.5"
jsonwebtoken = "9"
sha2 = "0.11"
# Pure-Rust MP4/M4A parser used for duration probing on the /v1/dictate
# path, where the desktop helper records AAC-in-MPEG-4. Hound is WAV-only.
mp4 = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "timeout", "limit", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
zeroize = { version = "1", features = ["derive"] }

pretty_assertions = "1"
rstest = "0.23"
wiremock = "0.6"

[workspace.lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }
unreachable_pub = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3

[profile.dev]
opt-level = 0
incremental = true
