[package]
name = "os-scribe"
version = "0.0.20"
description = "June"
authors = ["Open Software Network"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.80.0"

[lib]
name = "os_scribe_lib"
crate-type = ["rlib"]

[[bin]]
name = "os-scribe"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
cpal = "0.15"
dotenvy = "0.15"
hound = "3.5"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
# Avoid the SQLx umbrella crate here. Its optional macro/database dependencies
# put unused MySQL/Postgres packages into Cargo.lock and cargo-audit.
# sqlx-sqlite does not expose a public runtime-tokio feature in SQLx 0.8.x, so
# the direct sqlx-core dependency intentionally enables its runtime hook.
sqlx = { package = "sqlx-core", version = "0.8", default-features = false, features = ["_rt-tokio", "chrono", "uuid"] }
sqlx-sqlite = { version = "0.8", default-features = false, features = ["bundled", "chrono", "uuid"] }
tauri = { version = "2.8.0", features = ["protocol-asset", "macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-deep-link = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2.3.1"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-updater = "2.10.1"
thiserror = "2.0"
tokio = { version = "1.42", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
urlencoding = "2"
uuid = { version = "1.11", features = ["serde", "v4"] }
zeroize = { version = "1", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = [
    "std",
    "NSApplication",
    "NSImage",
    "NSMenu",
    "NSMenuItem",
    "NSResponder",
] }
objc2-foundation = { version = "0.3", default-features = false, features = [
    "std",
    "NSString",
    "NSValue",
    "NSGeometry",
    "objc2-core-foundation",
] }
window-vibrancy = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[dev-dependencies]
tempfile = "3.14"
