[package]
name = "os-june"
version = "0.0.34"
description = "June"
authors = ["Open Software Network"]
license = "MIT"
edition = "2021"
rust-version = "1.80.0"

[lib]
name = "os_june_lib"
crate-type = ["rlib"]

[[bin]]
name = "os-june"
path = "src/main.rs"

[[bin]]
name = "june-computer-use-driver"
path = "src/computer_use_driver.rs"

[build-dependencies]
serde_json = "1.0"
sha2 = "0.10"
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
cpal = "0.15"
dotenvy = "0.15"
hound = "3.5"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
# Pure-Rust FFT for the echo-rejection similarity gate (GCC-PHAT lag estimation).
rustfft = "6.2"
# Matches the version tauri-plugin-updater resolves, so the version_comparator
# closure can name the same `semver::Version` the updater hands it.
semver = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
# Avoid the SQLx umbrella crate here. Its optional macro/database dependencies
# put unused MySQL/Postgres packages into Cargo.lock and cargo-audit.
# sqlx-sqlite does not expose a public runtime-tokio feature in SQLx 0.8.x, so
# the direct sqlx-core dependency intentionally enables its runtime hook.
sqlx = { package = "sqlx-core", version = "0.8", default-features = false, features = ["_rt-tokio", "chrono", "uuid"] }
sqlx-sqlite = { version = "0.8", default-features = false, features = ["bundled", "chrono", "uuid"] }
tauri = { version = "2.8.0", features = ["protocol-asset", "macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-deep-link = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2.3.1"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-updater = "2.10.1"
thiserror = "2.0"
tokio = { version = "1.42", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
urlencoding = "2"
uuid = { version = "1.11", features = ["serde", "v4"] }
zeroize = { version = "1", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
# screencapturekit supports >=0.6,<0.9, but apple-metal 0.6.1+ references
# macOS 26 SDK symbols that do not compile on June's macOS 15/Xcode 16 lane.
apple-metal = { version = "=0.6.0", default-features = false }
keyring = { version = "3", features = ["apple-native"] }
block2 = "0.6"
cua-driver-core = { git = "https://github.com/trycua/cua", rev = "51582fd2ad8cffb68b2c6c81077d391132d7a0e1" }
libc = "0.2"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = [
    "std",
    "NSApplication",
    "NSDragging",
    "NSDraggingItem",
    "NSDraggingSession",
    "NSEvent",
    "NSImage",
    "NSMenu",
    "NSMenuItem",
    "NSPasteboard",
    "NSResponder",
    "NSRunningApplication",
    "NSView",
    "NSWindow",
    "NSWorkspace",
    "libc",
] }
objc2-foundation = { version = "0.3", default-features = false, features = [
    "std",
    "NSArray",
    "NSObject",
    "NSString",
    "NSURL",
    "NSValue",
    "NSData",
    "NSGeometry",
    "objc2-core-foundation",
] }
window-vibrancy = "0.6"
platform-macos = { git = "https://github.com/trycua/cua", rev = "51582fd2ad8cffb68b2c6c81077d391132d7a0e1" }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_Media_KernelStreaming",
    "Win32_Media_Multimedia",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_IO",
    "Win32_System_Threading",
] }

[dev-dependencies]
tempfile = "3.14"
