[package]
name = "june-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
axum.workspace = true
base64.workspace = true
reqwest.workspace = true
sha2.workspace = true
june-config.workspace = true
june-domain.workspace = true
june-services.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower = { workspace = true, features = ["timeout", "util"] }
tower-http.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
async-trait.workspace = true
pretty_assertions.workspace = true
tower = { workspace = true, features = ["util"] }
