[package]
name = "june"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[lints]
workspace = true

[[bin]]
name = "june"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum.workspace = true
clap.workspace = true
dotenvy.workspace = true
reqwest.workspace = true
june-api.workspace = true
june-config.workspace = true
june-domain.workspace = true
june-persistence.workspace = true
june-providers.workspace = true
june-services.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
