[package]
name = "june-services"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
bytes.workspace = true
june-config.workspace = true
june-domain.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
whatlang.workspace = true

[dev-dependencies]
async-trait.workspace = true
pretty_assertions.workspace = true
rstest.workspace = true
