[package]
name = "scribe-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
axum.workspace = true
scribe-config.workspace = true
scribe-domain.workspace = true
scribe-services.workspace = true
serde.workspace = true
thiserror.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
