[package]
name = "scribe"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[lints]
workspace = true

[[bin]]
name = "scribe"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum.workspace = true
clap.workspace = true
dotenvy.workspace = true
scribe-api.workspace = true
scribe-config.workspace = true
scribe-domain.workspace = true
scribe-providers.workspace = true
scribe-services.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
