[package]
name = "scribe-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
figment.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
