[package]
name = "scribe-providers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
hound.workspace = true
mp4.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
scribe-config.workspace = true
scribe-domain.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
wiremock.workspace = true
